--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,6 @@
 </div>
 <div class="flex justify-center bg-black bg-opacity-20">
   <p class="text-lg py-5">
-    Made by Aman Kumar Anand
+    Made by 💖 Aman Kumar Anand 💖
   </p>
 </div>
