--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,9 @@
 <!-- <router-outlet></router-outlet> -->
 <div>
 <div class="min-h-[90vh]">
-  <p>
-    <mat-toolbar class="flex items-center justify-between" color="primary">
-     <div>
-      <span>Recipe Date</span>
-     </div>
-     <div>
-      <span class="example-spacer"></span>
-      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-        <mat-icon>favorite</mat-icon>
-      </button>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-        <mat-icon>share</mat-icon>
-      </button>
-     </div>     
-    </mat-toolbar>
-  </p>
+  <app-navbar/>
 </div>
 </div>
 <div class="flex justify-center bg-black bg-opacity-20">
-  <p class="text-lg py-5">
-    Made by 💖 Aman Kumar Anand 💖
-  </p>
+ <app-footer/>
 </div>
