--- a/src/app/recipe-card/recipe-card.component.html
+++ b/src/app/recipe-card/recipe-card.component.html
@@ -1,1 +1,19 @@
-<p>recipe-card works!</p>
+<mat-card class="example-card">
+    <mat-card-header>
+      <img mat-card-avatar src="https://images.pexels.com/photos/1381236/pexels-photo-1381236.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+      <mat-card-title>Pizza</mat-card-title>
+      <mat-card-subtitle>Pizza Recipe</mat-card-subtitle>
+    </mat-card-header>
+    <img class="max-h-[400px] object-cover" mat-card-image src="https://images.pexels.com/photos/825661/pexels-photo-825661.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Photo of a recipe">
+    <mat-card-content>
+      <p>
+        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+        bred for hunting.
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+  </mat-card>
