--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 <div>
 <div class="min-h-[90vh]">
   <app-navbar/>
-  <app-home/>
+  <!-- <app-home/> -->
+  <app-auth/>
 </div>
 </div>
 <div class="flex justify-center bg-black bg-opacity-20">
