--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
 
     </div>
     <div class="fixed bottom-10 right-7">
-        <button (click)="OpenCreateRecipeForm()" mat-fab color="Accent">
+        <button (click)="OpenCreateRecipeForm()" mat-fab  color="primary">
             <mat-icon>add</mat-icon>
         </button>
     </div>
