--- a/src/app/update-recipe/update-recipe.component.html
+++ b/src/app/update-recipe/update-recipe.component.html
@@ -1,11 +1,9 @@
-<div class="text-center pt-5">
-    <h2>Create Recipe</h2>
-</div>
+<h2 class="text-center pt-5">Update Recipe</h2>
 <form (ngSubmit)="onSubmit()"class="w-[27rem] p-6 rounded-lg shadow-md">
     <div class="mb-3">
         <mat-form-field class="w-full">
             <mat-label class="text-gray-200">title</mat-label>
-            <input matInput placeholder="title..." value=""
+            <input matInput placeholder="title..." value="recipeItem.title"
             name="title"
             [(ngModel)]="recipeItem.title"
             class="py-2 px-3 text-gray-200 mt-1 focus:shadow-outline">
@@ -38,7 +36,7 @@
     </div>
     <div>
         <button mat-raised-button color="primary" type="submit">
-            Create
+            Update/Edit
         </button>
     </div>
 </form>
