auth API added to frontend

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -16,7 +16,7 @@
     <mat-tab label="Signup">
       <form [formGroup]="signupForm" (ngSubmit)="onSignup()">
         <mat-form-field>
-          <input matInput placeholder="Fullname" formControlName="fullname">
+          <input matInput placeholder="FullName" formControlName="fullName">
         </mat-form-field>
         <mat-form-field>
           <input matInput placeholder="Email" formControlName="email">
