--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,14 @@
 <div>
 <div class="min-h-[90vh]">
   <app-navbar/>
-  <!-- <app-home/> -->
-  <app-auth/>
+  @if(user){
+    <app-home/>
+  }
+  @else{
+    <app-auth/>
+  }
+   <!-- <app-auth/> -->
+
 </div>
 </div>
 <div class="flex justify-center bg-black bg-opacity-20">
