--- a/src/app/recipe-card/recipe-card.component.html
+++ b/src/app/recipe-card/recipe-card.component.html
@@ -1,15 +1,13 @@
 <mat-card class="example-card">
     <mat-card-header>
       <img mat-card-avatar src="https://images.pexels.com/photos/1381236/pexels-photo-1381236.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
-      <mat-card-title>Pizza</mat-card-title>
-      <mat-card-subtitle>Pizza Recipe</mat-card-subtitle>
+      <mat-card-title>{{recipe.user.fullName}}</mat-card-title>
+      <mat-card-subtitle>Recipe</mat-card-subtitle>
     </mat-card-header>
-    <img class="max-h-[400px] object-cover" mat-card-image src="https://images.pexels.com/photos/825661/pexels-photo-825661.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Photo of a recipe">
+    <img class="max-h-[400px] object-cover" mat-card-image [src]="recipe.image" alt="Photo of a recipe">
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        {{recipe.description}}
       </p>
     </mat-card-content>
     <mat-card-actions class="flex justify-between">
